# staff-scheduling

./: .gitignore  LICENSE  README.md  app.py  auth.py  database.py  index.html  payroll.py  pyproject.toml  seed_demo.py  styles.py  timeutils.py  validation.py
.github/workflows/: ci.yml
tests/: conftest.py  test_app_smoke.py  test_database.py  test_integration.py  test_payroll.py  test_timeutils.py  test_validation.py
views/: __init__.py  employees.py  payroll.py  schedule.py  settings.py  templates.py
